# cli-agent-proxy

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
docs/: api-schema.md  claude-code-provider.md  product-design.md  sandbox-architecture.md
src/aviary/: __init__.py  approvals.py  main.py  schemas.py  session_manager.py  settings.py  skill_sources.py
src/aviary/providers/: base.py  claude_code.py
src/aviary/runtime/: __init__.py  cli.py  protocol.py  worker.py
src/aviary/sandbox/: __init__.py  base.py  docker.py  docker_cli.py  embedded.py  local_unsafe.py  workspace.py
src/cli_agent_proxy/: __init__.py  main.py  schemas.py  session_manager.py
src/cli_agent_proxy/providers/: base.py  claude_code.py
src/cli_agent_proxy/sandbox/: __init__.py  base.py  docker.py  local_unsafe.py
tests/: test_api.py  test_approval_broker.py  test_claude_code_provider.py  test_docker_cli_runtime.py  test_docker_sandbox.py  test_embedded_sandbox.py  test_local_unsafe_sandbox.py  test_runtime_cli.py  test_runtime_protocol.py  test_runtime_worker.py  test_settings.py  test_skill_sources.py  test_workspace.py
